[tool.poetry]
name = "unknown-game"
version = "0.1.0"
description = ""
authors = ["tangxuanzhao <xuanzhaotang@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
sqlitedict = "2.1.0"
modelscope = "^1.13.1"
langchain = "^0.1.12"
dynaconf = "3.2.2"
openai = "0.28.0"
djangorestframework = "3.14.0"
markdown = "3.5.1"
django-filter = "23.3"
dashscope = "^1.15.0"
langchain-community = "^0.0.28"
json5 = "^0.9.24"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
